--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://color-matching-game.vercel.app/" />
+  <meta property="og:url" content="https://ngocsang1201.github.io/color-matching-game/" />
   <meta property="og:title" content="Color Matching Game | Pure Javascript Application" />
   <meta property="og:description" content="A good way to practice javascript by building this simple game." />
-  <meta property="og:image" content="https://color-matching-game.vercel.app/images/thumbnail.png" />
+  <meta property="og:image" content="https://ngocsang1201.github.io/color-matching-game/images/thumbnail.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://color-matching-game.vercel.app/" />
+  <meta property="twitter:url" content="https://ngocsang1201.github.io/color-matching-game/" />
   <meta property="twitter:title" content="Color Matching Game | Pure Javascript Application" />
   <meta property="twitter:description" content="A good way to practice javascript by building this simple game." />
-  <meta property="twitter:image" content="https://color-matching-game.vercel.app/images/thumbnail.png" />
+  <meta property="twitter:image" content="https://ngocsang1201.github.io/color-matching-game/images/thumbnail.png" />
 
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/game.css" />
